tests/ui/cast/ptr-to-trait-obj-wrap-add-auto.stderr
error[E0804]: cannot add auto trait `Send` to dyn bound via pointer cast
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:12:5
   |
LL |     a as _
   |     ^^^^^^ unsupported cast
   |
   = note: this could allow UB elsewhere
   = help: use `transmute` if you're sure this is sound

error[E0804]: cannot add auto trait `Send` to dyn bound via pointer cast
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:17:5
   |
LL |     a as _
   |     ^^^^^^ unsupported cast
   |
   = note: this could allow UB elsewhere
   = help: use `transmute` if you're sure this is sound

error[E0804]: cannot add auto trait `Send` to dyn bound via pointer cast
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:22:5
   |
LL |     a as _
   |     ^^^^^^ unsupported cast
   |
   = note: this could allow UB elsewhere
   = help: use `transmute` if you're sure this is sound

error[E0804]: cannot add auto trait `Send` to dyn bound via pointer cast
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:27:5
   |
LL |     a as _
   |     ^^^^^^ unsupported cast
   |
   = note: this could allow UB elsewhere
   = help: use `transmute` if you're sure this is sound

error[E0804]: cannot add auto trait `Send` to dyn bound via pointer cast
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:32:5
   |
LL |     a as _
   |     ^^^^^^ unsupported cast
   |
   = note: this could allow UB elsewhere
   = help: use `transmute` if you're sure this is sound

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0804`.
